# HighSchoolProjects

./: README.md
FluidSim/: README.md
FluidSim/src/engine/: GameEngine.java  IGameLogic.java
FluidSim/src/game/: FluidSimulation.java  Main.java  RenderWindow.java
GameOfLife/: .gitignore  README.md
GameOfLife/src/: CellMain.java  CellModel.java  CellSheet.java  Controller.java  DisplayCells.java
MatrixVisualizer/: README.md
MatrixVisualizer/src/: BasisVectors.java  GraphicsPanel.java  Matrix.java  MatrixController.java  MatrixMain.java  MatrixModel.java  MatrixPlane.java  MatrixView.java  Vector.java
MazeSolver/: README.md
MazeSolver/src/: MazeDisplay.java  MazeMain.java  MazeNav.java
PiCollisions/: .gitignore  README.md
PiCollisions/src/: Blocks.java  CollisionsMain.java  DisplayCollisions.java
SnakeGameCpp/: .gitignore  CMakeLists.txt  README.md  gameEngine.cpp  gameEngine.h  main.cpp  snakeGameEngine.cpp  snakeGameEngine.h  visualStructs.h  window.cpp  window.h
SortingAlgorithms/src/AlgorithmDisplay/: AlgorithmMain.java  MainJFrame.java
jaketh.com/: .gitignore
jaketh.com/components/: Abilities.js  Colors.txt  Footer.js  GetProjects.js  Header.js  Layout.js  NameSlide.js  OtherInfo.js
jaketh.com/pages/: about.js  blog.js  contact.js  index.js  projects.js
jaketh.com/pages/p/: [id].js
jaketh.com/pages/projects/: [title].js
